# craby

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  biome.json  mise.toml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-docs.yml  e2e.yml
crates/craby/: Cargo.toml
crates/craby_build/: Cargo.toml
crates/craby_build/src/: constants.rs  cxx.rs  lib.rs  setup.rs  utils.rs
crates/craby_build/src/cargo/: artifact.rs  build.rs  mod.rs
crates/craby_build/src/platform/: android.rs  ios.rs
crates/craby_cli/: Cargo.toml
crates/craby_codegen/: Cargo.toml
crates/craby_codegen/src/: codegen.rs  common.rs  constants.rs  generator.rs  lib.rs  utils.rs
crates/craby_common/: Cargo.toml
crates/craby_core/: Cargo.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: build.md  cli-commands.md  codegen.md  configuration.md  errors.md  getting-started.md  introduction.md  module-definition.md  showcase.md  signals.md  sync-vs-async.md  types.md
examples/0.80/: App.tsx  metro.config.js  package.json  react-native.config.js
examples/craby-test/: .gitignore  CrabyTest.podspec  README.md  craby.toml  package.json  tsconfig.json  tsdown.config.ts
examples/test-suites/: package.json  tsdown.config.ts
template/: .gitignore  README.md  craby.toml  package.json  {{pascal_name}}.podspec
template/android/: CMakeLists.txt  build.gradle  gradle.properties
template/cpp/: bridging-generated.hpp  {{cxx_name}}.cpp  {{cxx_name}}.hpp
template/ios/: {{objc_provider}}.mm
xtask/: Cargo.toml
xtask/src/: main.rs
(+121 files in other folders)
