[package]
name = "craby_build"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Craby build utilities"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[dependencies]
craby_codegen = { version = "0.0.0", path = "../craby_codegen" }
craby_common  = { version = "0.0.0", path = "../craby_common" }
log           = { workspace = true }
anyhow        = { workspace = true }
owo-colors    = { workspace = true }
indoc         = "2.0.6"
